# DailyNews

./: .gitignore  .pre-commit-config.yaml  README.md  deploy.sh  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt
backend/: news_recommendation_service_client.py  operations.py  operationsTest.py  service.py
click_recommendation_service/: click_log_processor.py  click_log_processor_test.py  constants.py  news_classes.py  recommendation_service.py  test.html
click_recommendation_service/click_log_processor/: click_log_processor.py
click_recommendation_service/recommendation_service/: recommendation_service.py
client/: package-lock.json  package.json
client/dailynews/: dump.rdb  package-lock.json  package.json
common/: cloudAMQPClient.py  cloudAMQPClientTest.py  kafkaClient.py  mongodbClient.py  mongodbClientTest.py  news_api_client.py  news_api_client_test.py
dailynews/: package-lock.json  package.json
dailynews/public/: index.html
dailynews/src/: index.js
news_pipeline/: Dockerfile  dump.rdb  news_deduper.py  news_fetcher.py  news_monitor.py
news_pipeline/news_deduper/: Dockerfile  news_deduper.py
news_pipeline/news_monitor/: Dockerfile  news_monitor.py
news_pipeline/scrapers/: Dockerfile  cnn_news_scraper.py  cnn_news_scraper_test.py  news_fetcher.py
news_service/: news_recommendation_service_client.py  operations.py  operationsTest.py  service.py
server/: app.js  package-lock.json  package.json
server/models/: main.js  user.js
server/passport/: login_passport.js
server/routes/: auth.js  index.js  news.js
(+23 files in other folders)
